@@ -1,0 +1,1 @@
+#define BROT2_VERSION_STRING "0.1"
